syntax = "proto3";
package proto;


option go_package = "github.com/iamNator/imageCache;imageCache";

message UploadRequestType {
  bytes Content = 1;
  string Filename = 2;

}

message UploadResponseType {
  string Message = 1;
  UploadStatusCode Code = 2;
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}


service rkUploaderService {

  rpc UploadFile(stream UploadRequestType) returns (UploadResponseType ) ;

}